# serializer version: 1
# name: test_platform_setup_and_discovery[select.hem_hub_led_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.hem_hub_led_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'led_mode',
    'unique_id': '295972-led_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.hem_hub_led_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hem-hub LED Mode',
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hem_hub_led_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[select.katzenklappe_locking_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.katzenklappe_locking_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locking Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'locking',
    'unique_id': '1299453-locking',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.katzenklappe_locking_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_platform_setup_and_discovery[select.laundry_door_locking_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.laundry_door_locking_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locking Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'locking',
    'unique_id': '727608-locking',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.laundry_door_locking_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.laundry_door_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UNLOCKED',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_add_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'DualScanConnect door',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_add_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Add assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'add_assigned_device',
    'unique_id': '472721-add_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_add_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Add assigned device',
      'options': list([
        'DualScanConnect door',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_bowls_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bowls Type',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bowls_type',
    'unique_id': '269654-bowls_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_bowls_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_lid_close_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lid close delay',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lid',
    'unique_id': '269654-lid',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_lid_close_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_training_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Training Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'training_mode',
    'unique_id': '269654-training_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_matlada_old_training_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_remove_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'PetDoor',
        'Feeder',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_remove_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remove assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remove_assigned_device',
    'unique_id': '472721-remove_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.maui_remove_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Remove assigned device',
      'options': list([
        'PetDoor',
        'Feeder',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[select.pet_with_empty_status_add_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'DualScanConnect door',
        'Feeder',
        'PetDoor',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Add assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'add_assigned_device',
    'unique_id': '222222-add_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.pet_with_empty_status_add_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Add assigned device',
      'options': list([
        'DualScanConnect door',
        'Feeder',
        'PetDoor',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[select.pet_with_empty_status_remove_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pet_with_empty_status_remove_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remove assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remove_assigned_device',
    'unique_id': '222222-remove_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[select.pet_with_empty_status_remove_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Remove assigned device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.hem_hub_led_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.hem_hub_led_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'led_mode',
    'unique_id': '295972-led_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.hem_hub_led_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hem-hub LED Mode',
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hem_hub_led_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.katzenklappe_locking_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.katzenklappe_locking_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locking Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'locking',
    'unique_id': '1299453-locking',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.katzenklappe_locking_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.laundry_door_locking_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.laundry_door_locking_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Locking Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'locking',
    'unique_id': '727608-locking',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.laundry_door_locking_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.laundry_door_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UNLOCKED',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_add_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_add_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Add assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'add_assigned_device',
    'unique_id': '472721-add_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_add_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Add assigned device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_bowls_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bowls Type',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bowls_type',
    'unique_id': '269654-bowls_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_bowls_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_lid_close_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lid close delay',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lid',
    'unique_id': '269654-lid',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_lid_close_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_training_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Training Mode',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'training_mode',
    'unique_id': '269654-training_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_matlada_old_training_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_remove_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.maui_remove_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remove assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remove_assigned_device',
    'unique_id': '472721-remove_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.maui_remove_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Remove assigned device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.pet_with_empty_status_add_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Add assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'add_assigned_device',
    'unique_id': '222222-add_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.pet_with_empty_status_add_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Add assigned device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.pet_with_empty_status_remove_assigned_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pet_with_empty_status_remove_assigned_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remove assigned device',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remove_assigned_device',
    'unique_id': '222222-remove_assigned_device',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[select.pet_with_empty_status_remove_assigned_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Remove assigned device',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hem-hub LED Mode',
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hem_hub_led_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hem-hub LED Mode',
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hem_hub_led_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.10
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_select_set_option_and_snapshot.11
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
# name: test_select_set_option_and_snapshot.12
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_select_set_option_and_snapshot.13
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_select_set_option_and_snapshot.14
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_select_set_option_and_snapshot.15
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_select_set_option_and_snapshot.16
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Training Mode',
      'options': list([
        'DISABLED',
        'STEP_1',
        'STEP_2',
        'STEP_3',
        'STEP_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_training_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DISABLED',
  })
# ---
# name: test_select_set_option_and_snapshot.17
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_select_set_option_and_snapshot.18
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_select_set_option_and_snapshot.19
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_select_set_option_and_snapshot.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hem-hub LED Mode',
      'options': list([
        'NONE',
        'WEAK',
        'STRONG',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hem_hub_led_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.20
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_select_set_option_and_snapshot.21
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_select_set_option_and_snapshot.22
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Bowls Type',
      'options': list([
        'LARGE_WET',
        'LARGE_DRY',
        'TWO_SMALL_WET_WET',
        'TWO_SMALL_WET_DRY',
        'TWO_SMALL_DRY_WET',
        'TWO_SMALL_DRY_DRY',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_bowls_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TWO_SMALL_WET_WET',
  })
# ---
# name: test_select_set_option_and_snapshot.23
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.24
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.25
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.26
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Katzenklappe Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.katzenklappe_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.27
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.laundry_door_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UNLOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.28
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.laundry_door_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UNLOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.29
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.laundry_door_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UNLOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.3
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Remove assigned device',
      'options': list([
        'PetDoor',
        'Feeder',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.30
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Locking Mode',
      'options': list([
        'UNLOCKED',
        'ALLOW_IN',
        'ALLOW_OUT',
        'LOCKED',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.laundry_door_locking_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'UNLOCKED',
  })
# ---
# name: test_select_set_option_and_snapshot.4
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Remove assigned device',
      'options': list([
        'PetDoor',
        'Feeder',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_remove_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.5
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Add assigned device',
      'options': list([
        'DualScanConnect door',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.6
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Add assigned device',
      'options': list([
        'DualScanConnect door',
        'Feeder',
        'PetDoor',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.7
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Add assigned device',
      'options': list([
        'DualScanConnect door',
        'Feeder',
        'PetDoor',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.8
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Add assigned device',
      'options': list([
        'DualScanConnect door',
        'Feeder',
        'PetDoor',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pet_with_empty_status_add_assigned_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select_set_option_and_snapshot.9
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui matlåda (old)  Lid close delay',
      'options': list([
        'FASTER',
        'NORMAL',
        'SLOWER',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.maui_matlada_old_lid_close_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'FASTER',
  })
# ---
